--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,6 +1,8 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "homepage": "https://xl-liu.github.io",
+  "author": "xintong liu",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
